@@ -4,6 +4,8 @@ Revision history for XML-Grammar-Fiction.
     would be translated to <body xml:lang=".."> attribute in Fiction-XML (and
     eventually to DocBook 5/XML).
     * Add support for the lang="..." attribute in <section>/<s>.
+    * Add the <span> tag for Fiction-Text (already exists in Fiction-XML).
+        - supports two attributes - lang -> xml:lang and id -> xml:id.
 
 0.6.0      Mon May 23 22:59:05 IDT 2011
     * Add the version="5.0" attribute to the top-level tag of the
